2012-10-05 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/zip-pic16devices.pl,
	  device/include/pic16/pic16devices.txt:
	  applied patch #3574556 - Compressed pic16devices.txt file,
	  thanks to Molnar Karoly

2012-10-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asdbg.c,
	* sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslex.c,
	* sdas/asxxsrc/aslist.c,
	* sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asout.c,
	* sdas/asxxsrc/asxxxx.h: another step to ASxxxx v5

2012-10-03 Borut Razem <borut.razem AT gmail.com>

	* device/non-free/lib/pic16/libdev/mkmk.sh: 
	  applied patch #3574102 - Modification of device/non-free/lib/pic16/libdev/mkmk.sh

2012-10-02 Borut Razem <borut.razem AT gmail.com>

	* device/include/pic16/pic18fregs.h,
	  device/include/pic16/pic16devices.txt,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/adc.ignore,
	  device/lib/pic16/libio/i2c.ignore,
	  device/lib/pic16/libio/usart.ignore,
	  device/lib/pic16/libio/Makefile.in,
	  device/non-free/lib/pic16/libdev/Makefile.in,
	  device/non-free/lib/pic16/libdev/Makefile.am,
	  device/non-free/lib/pic16/pics.all,
	  device/non-free/include/pic16pic18f13k22.h,
	  device/non-free/lib/pic16/libdev/pic18f13k22.c,
	  device/non-free/include/pic16pic18f14k22.h,
	  device/non-free/lib/pic16/libdev/pic18f14k22.c,
	  device/non-free/include/pic16pic18f24j11.h,
	  device/non-free/lib/pic16/libdev/pic18f24j11.c,
	  device/non-free/include/pic16pic18f24k50.h,
	  device/non-free/lib/pic16/libdev/pic18f24k50.c,
	  device/non-free/include/pic16pic18f25j11.h,
	  device/non-free/lib/pic16/libdev/pic18f25j11.c,
	  device/non-free/include/pic16pic18f25k50.h,
	  device/non-free/lib/pic16/libdev/pic18f25k50.c,
	  device/non-free/include/pic16pic18f25k80.h,
	  device/non-free/lib/pic16/libdev/pic18f25k80.c,
	  device/non-free/include/pic16pic18f26j11.h,
	  device/non-free/lib/pic16/libdev/pic18f26j11.c,
	  device/non-free/include/pic16pic18f26j13.h,