@@ -203,14 +203,6 @@ name        18f25j50
 ramsize     3776
 split       0x60
 configrange 0x007FF8 0x007FFF
-configword  0x003FF8 0xEF 0xFF 0xBF
-configword  0x003FF9 0x07 0xFF
-configword  0x003FFA 0xDF 0xFF
-configword  0x003FFB 0x0F 0xFF
-configword  0x003FFC 0xFF 0xFF
-configword  0x003FFD 0x09 0xFF
-configword  0x003FFE 0xFF 0xFF
-configword  0x003FFF 0x01 0xFF
 configword  0x007FF8 0xEF 0xFF 0xBF
 configword  0x007FF9 0x07 0xFF
 configword  0x007FFA 0xDF 0xFF
@@ -294,14 +286,6 @@ name        18f26j50
 ramsize     3776
 split       0x60
 configrange 0x00FFF8 0x00FFFF
-configword  0x003FF8 0xEF 0xFF 0xBF
-configword  0x003FF9 0x07 0xFF
-configword  0x003FFA 0xDF 0xFF
-configword  0x003FFB 0x0F 0xFF
-configword  0x003FFC 0xFF 0xFF
-configword  0x003FFD 0x09 0xFF
-configword  0x003FFE 0xFF 0xFF
-configword  0x003FFF 0x01 0xFF
 configword  0x00FFF8 0xEF 0xFF 0xBF
 configword  0x00FFF9 0x07 0xFF
 configword  0x00FFFA 0xDF 0xFF
